--- a/main.html
+++ b/main.html
@@ -7,8 +7,65 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width: 100%; height: 100%">
-      <!-- Your code here -->
+    <table border="1">
+        <tr>
+            <td rowspan="2">Nested Table 1</td>
+            <td>Column 1</td>
+            <td>Column 2</td>
+        </tr>
+        <tr>
+            <td>Row 1, Cell 1</td>
+            <td>Row 1, Cell 2</td>
+        </tr>
     </table>
-  </body>
+
+    <table border="1">
+        <tr>
+            <td rowspan="2">Nested Table 2</td>
+            <td>Column 1</td>
+            <td>Column 2</td>
+        </tr>
+        <tr>
+            <td>Row 1, Cell 1</td>
+            <td style="background-color: black; color: white;">HTML</td>
+        </tr>
+    </table>
+
+    <table border="1">
+        <tr>
+            <td rowspan="3">Nested Table 3</td>
+            <td>Column 1</td>
+            <td>Column 2</td>
+        </tr>
+        <tr>
+            <td>Row 1, Cell 1</td>
+            <td>Row 1, Cell 2</td>
+        </tr>
+        <tr>
+            <td>Row 2, Cell 1</td>
+            <td>Row 2, Cell 2</td>
+        </tr>
+    </table>
+
+    <table border="1">
+        <tr>
+            <td rowspan="2">Nested Table 4</td>
+            <td>Column 1</td>
+            <td>Column 2</td>
+        </tr>
+        <tr>
+            <td>Row 1, Cell 1</td>
+            <td>Row 1, Cell 2</td>
+        </tr>
+        <tr>
+            <td colspan="3">
+                <ul>
+                    <li>List item 1</li>
+                    <li>List item 2</li>
+                    <li>List item 3</li>
+                </ul>
+            </td>
+        </tr>
+    </table>
+</body>
 </html>
