--- a/main.html
+++ b/main.html
@@ -7,65 +7,67 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table border="1">
-        <tr>
-            <td rowspan="2">Nested Table 1</td>
-            <td>Column 1</td>
-            <td>Column 2</td>
-        </tr>
-        <tr>
-            <td>Row 1, Cell 1</td>
-            <td>Row 1, Cell 2</td>
-        </tr>
-    </table>
-
-    <table border="1">
-        <tr>
-            <td rowspan="2">Nested Table 2</td>
-            <td>Column 1</td>
-            <td>Column 2</td>
-        </tr>
-        <tr>
-            <td>Row 1, Cell 1</td>
-            <td style="background-color: black; color: white;">HTML</td>
-        </tr>
-    </table>
-
-    <table border="1">
-        <tr>
-            <td rowspan="3">Nested Table 3</td>
-            <td>Column 1</td>
-            <td>Column 2</td>
-        </tr>
-        <tr>
-            <td>Row 1, Cell 1</td>
-            <td>Row 1, Cell 2</td>
-        </tr>
-        <tr>
-            <td>Row 2, Cell 1</td>
-            <td>Row 2, Cell 2</td>
-        </tr>
-    </table>
-
-    <table border="1">
-        <tr>
-            <td rowspan="2">Nested Table 4</td>
-            <td>Column 1</td>
-            <td>Column 2</td>
-        </tr>
-        <tr>
-            <td>Row 1, Cell 1</td>
-            <td>Row 1, Cell 2</td>
-        </tr>
-        <tr>
-            <td colspan="3">
-                <ul>
-                    <li>List item 1</li>
-                    <li>List item 2</li>
-                    <li>List item 3</li>
-                </ul>
-            </td>
-        </tr>
-    </table>
+    <table border="1" style="weight:100%; height:100%">
+		<tr>
+			<td>
+				<!--nested 2-->
+				<table border="1" style="width:100%">
+					<tr>
+						<th colspan="2">Nested Table 2</th>
+					</tr>
+					<tr>
+						<th>Column 1</th>
+						<th>Column 2</th>
+					</tr>
+					<tr>
+						<td>abc</td>
+						<td>def</td>
+					</tr>
+				</table>
+			</td>
+			<td>
+				<!--nested 1-->
+				<table border="1" style="width:100%">
+					<tr>
+						<th>Nested Table 1</th>
+					</tr>
+					<tr>
+						<td>
+							<ul>
+								<li>List item</li>
+								<li>List item</li>
+								<li>List item</li>
+							</ul>
+						</td>
+					</tr>
+				</table>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<!--nested 3-->
+				<table border="1" style="width:100%">
+					<tr>
+						<th colspan="2">Nested Table 3</th>
+					</tr>
+					<tr>
+						<td><a href="#">Nested Table</a></td>
+						<td>Demo Continued</td>
+					</tr>
+				</table>
+			</td>
+			<td>
+				<!--nested 4-->
+				<table border="1" style="width:100%">
+					<tr>
+						<th>Nested Table 4</th>
+					</tr>
+					<tr style="background-color:black; color:white;">
+						<td>HTML</td>
+					</tr>
+				</table>
+			</td>
+		</tr>
+	</table>
 </body>
 </html>
